--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -52,6 +52,7 @@ body {
   font-weight: 300;
   line-height: 1.1;
   margin-bottom: 0.25em;
+  color: green;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
